# markdown-mermaid-cli

./: .cspell.json  CHANGELOG.md  README.md  compose.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: gh-pages.yml  publish-to-pypi.yml
docs/: mermaid.md
src/markdown_mermaid_cli/: __init__.py  extension.py
src/markdown_mermaid_data_uri/: __init__.py  extension.py
src/mermaid_data_uri/: extension.py
