[project]
name = "markdown-mermaid-cli"
version = "0.1.0"
description = "markdown-mermaid-cli"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "markdown>=3.8",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.11",
    "mkdocs-to-pdf>=0.10.0",
    "pymdown-extensions>=10.14.3",
    "types-markdown>=3.8.0.20250415",
    "types-requests>=2.32.0.20250328",
]

[tool.ruff]
line-length = 119
[tool.ruff.format]
quote-style = "single"
